Crash when entering edit mode with UV Editor open #78647

Closed
opened 2020-07-05 17:45:24 +02:00 by BC Holmes · 30 comments

System Information
Operating system: Darwin-19.5.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.9.15

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-04 15:31, hash: 464aaf2701
Worked: 2.83.0 , caused by afd976a3b4 ?

Short description of error
When the view port has both the object modelling window and the UV Editor window open, Blender crashes when entering edit mode. I repeated the crash several times in a row. It would crash when trying to edit several different meshes. Once I closed the UV Editor, the crashing stopped.

Seems similar to https://developer.blender.org/T70247 but the problem manifests in 2.90 Alpha and not in 2.83.0. Also, I think it started to manifest around the July 1 build.

Exact steps for others to reproduce the error
Select a mesh and enter edit mode based on sample .blend file.

**System Information** Operating system: Darwin-19.5.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.9.15 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-04 15:31, hash: `464aaf2701` Worked: 2.83.0 , caused by afd976a3b4 ? **Short description of error** When the view port has both the object modelling window and the UV Editor window open, Blender crashes when entering edit mode. I repeated the crash several times in a row. It would crash when trying to edit several different meshes. Once I closed the UV Editor, the crashing stopped. Seems similar to https://developer.blender.org/T70247 but the problem manifests in 2.90 Alpha and not in 2.83.0. Also, I think it started to manifest around the July 1 build. **Exact steps for others to reproduce the error** Select a mesh and enter edit mode based on sample .blend file.
Author

Added subscriber: @bcholmes

Added subscriber: @bcholmes

#78895 was marked as duplicate of this issue

#78895 was marked as duplicate of this issue

#78706 was marked as duplicate of this issue

#78706 was marked as duplicate of this issue

#78797 was marked as duplicate of this issue

#78797 was marked as duplicate of this issue

#78767 was marked as duplicate of this issue

#78767 was marked as duplicate of this issue

#78700 was marked as duplicate of this issue

#78700 was marked as duplicate of this issue

#78616 was marked as duplicate of this issue

#78616 was marked as duplicate of this issue
Author
[Crash attempting to enter edit mode.txt](https://archive.blender.org/developer/F8667159/Crash_attempting_to_enter_edit_mode.txt) [High-Backed Chair - bug repot.blend](https://archive.blender.org/developer/F8667163/High-Backed_Chair_-_bug_repot.blend)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

No crash here (tested on 4f3045999d).
Textures are missing though, could you reupload the file with packed textures?

I believe there was an issue with normal maps (I think that was fixed though), but

No crash here (tested on 4f3045999d). Textures are missing though, could you reupload the file with packed textures? I believe there was an issue with normal maps (I think that was fixed though), but - could you also try the newest build from https://builder.blender.org/download/? - remove the normal map node in the shader and see if it still crashes?
Author
  1. I've downloaded and tried the July 5 build, and the crash still happens.
  2. I've also tried removing the Normal map, and the crash still happens.
  3. I'm uploading a version with the textures packed.

High-Backed Chair - bug repot.blend

1. I've downloaded and tried the July 5 build, and the crash still happens. 2. I've also tried removing the Normal map, and the crash still happens. 3. I'm uploading a version with the textures packed. [High-Backed Chair - bug repot.blend](https://archive.blender.org/developer/F8670010/High-Backed_Chair_-_bug_repot.blend)
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Also, I think it started to manifest around the July 1 build.

I don’t have the hardware and therefore cannot bisect this issue, but if I were to guess the cause, I would go with the July 1st UV editor commit that affects only MacOS afd976a3b4

> Also, I think it started to manifest around the July 1 build. I don’t have the hardware and therefore cannot bisect this issue, but if I were to guess the cause, I would go with the July 1st UV editor commit that affects only MacOS afd976a3b4
Member

Added subscriber: @TimoMuller

Added subscriber: @TimoMuller
Member

Added subscriber: @JohnCox-3

Added subscriber: @JohnCox-3
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

CC @fclem : does this ring a bell (also cannot really confirm - not on MAC)?

CC @fclem : does this ring a bell (also cannot really confirm - not on MAC)?

Added subscriber: @Lakman

Added subscriber: @Lakman

version: 2.90.0 Alpha, branch: master, commit date: 2020-07-07 16:23, hash: 4990e4dd01, type: Release
build date: 2020-07-07, 16:27:25
Mac mini OS X Catalina 10.15.5
Blender crashes when trying to open UV editing workspace.
system-info.txt

version: 2.90.0 Alpha, branch: master, commit date: 2020-07-07 16:23, hash: 4990e4dd01f2, type: Release build date: 2020-07-07, 16:27:25 Mac mini OS X Catalina 10.15.5 Blender crashes when trying to open UV editing workspace. [system-info.txt](https://archive.blender.org/developer/F8676543/system-info.txt)
Member

Added subscriber: @kostex

Added subscriber: @kostex
Member

Same here.. traced it back to afd976a3b4 too

As soon as you enter UV edit mode, blender crashes

Mac 10.14.6 Mojave
AMD Radeon M395X

Same here.. traced it back to afd976a3b483 too As soon as you enter UV edit mode, blender crashes Mac 10.14.6 Mojave AMD Radeon M395X
Member

Added subscribers: @lileo, @CookItOff

Added subscribers: @lileo, @CookItOff
Member

Added subscribers: @Kent-Davis, @mano-wii

Added subscribers: @Kent-Davis, @mano-wii

Added subscriber: @ahoernec

Added subscriber: @ahoernec

Added subscriber: @PaulGriffin

Added subscriber: @PaulGriffin

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-07-15 20:31:21 +02:00

This issue was referenced by 974e36d7d0

This issue was referenced by 974e36d7d0a199ac2333e91691c52dd27bb3f8e7
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78647
No description provided.