Fix T78647 UVEdit: Crash when entering edit mode with UV Editor open

Only affects MacOS.